--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain>=1.2.3",
     "langchain-anthropic>=1.3.1",
     "langchain-core>=1.2.6",
+    "langchain-openai>=1.1.7",
     "langchain-upstage>=0.7.5",
     "langfuse>=3.11.2",
     "langgraph>=1.0.5",
